refactoring the code adding injections
