# src/dtos/IUpdateUserDTO.ts
@@ -1,9 +1,9 @@
 type IUpdateUserDTO = {
   id: string;
-  name?: string;
-  email?: string;
-  birthDate?: Date;
-  userName?: string;
+  name: string;
+  email: string;
+  birthDate: Date;
+  userName: string;
 };
 
 export { IUpdateUserDTO };
