# src/swagger.json
@@ -1,256 +1,243 @@
 {
-    "openapi": "3.0.0",
-    "info": {
-        "title": "API manipulation of users",
-        "decription": "The main goal of this API is learn more about typescript,typeorm,swagger and unitary tests.",
-        "termsOfService": "http://localhost:3000/terms",
-        "contact": {
-            "email": "thaimsbrasil@hotmail.com"
-        },
-        "version": "1.0.0"
+  "openapi": "3.0.0",
+  "info": {
+    "title": "API manipulation of users",
+    "decription": "The main goal of this API is learn more about typescript,typeorm,swagger and unitary tests.",
+    "termsOfService": "http://localhost:3000/terms",
+    "contact": {
+      "email": "thaimsbrasil@hotmail.com"
     },
-    "serves": [
-        {
-            "url": "http://localhost:2016",
-            "description": "test API"
-        }
-    ],
-    "paths": {
-        "/user": {
-            "get": {
-                "summary": "Get All users",
-                "description": "This route is reponsible for get all users in the database",
-                "tags": [
-                    "User"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "array",
-                                    "$ref": "#/components/schemas/User"
-                                }
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    }
-                }
-            }
-        },
-        "/users": {
-            "post": {
-                "summary": "Create User",
-                "description": "This route is reponsible for create a new user.",
-                "tags": [
-                    "Users"
-                ],
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "$ref": "#/components/schemas/User"
-                            },
-                            "examples": {
-                                "user": {
-                                    "value": {
-                                        "name": "Bob Ross",
-                                        "email": "bobross@hotmail.com",
-                                        "birthDate": "2000-06-08",
-                                        "userName": "bobrosspainter"
-                                    }
-                                }
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "user created",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "object",
-                                    "$ref": "#/components/schemas/User"
-                                }
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "It was not possible to create the user"
-                    }
-                }
-            },
-            "get": {
-                "summary": "Find users by name or email",
-                "description": "This route is reponsible for search users by name and email using query params",
-                "tags": [
-                    "Users"
-                ],
-                "parameters": [
-                    {
-                        "name": "name",
-                        "in": "query",
-                        "type": "string",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "ok",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "array",
-                                    "items": {
-                                        "$ref": "#/components/schemas/User"
-                                    }
-                                }
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    }
-                }
-            }
-        },
-        "/users/update/{id}": {
-            "put": {
-                "summary": "Update user by id",
-                "description": "This route is reponsible for update a user by id using path params",
-                "tags": [
-                    "Users"
-                ],
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "$ref": "#/components/schemas/User"
-                            },
-                            "examples": {
-                                "user": {
-                                    "value": {
-                                        "name": "Thaís Barbosa",
-                                        "email": "thaisbarbosa@hotmail.com",
-                                        "birthDate": "2000-06-08",
-                                        "userName": "thaisbarbosa"
-                                    }
-                                }
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "array",
-                                    "$ref": "#/components/schemas/User"
-                                }
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    }
-                }
-            }
-        },
-        "/users/delete/{id}": {
-            "delete": {
-                "summary": "Delete user by id",
-                "description": "This route is reponsible for delete a user by id using path params",
-                "tags": [
-                    "Users"
-                ],
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "204": {
-                        "description": "User deleted"
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    }
-                }
-            }
-        },
-        "/users/{id}": {
-            "get": {
-                "summary": "Find user by id",
-                "description": "This route is reponsible for find a user by id using path params",
-                "tags": [
-                    "Users"
-                ],
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "array",
-                                    "items": {
-                                        "$ref": "#/components/schemas/User"
-                                    }
-                                }
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    }
-                }
-            }
-        }
-        
-    },
-    "components": {
-        "schemas": {
-            "User": {
-                "properties": {
-                    "name": {
-                        "type": "string"
-                    },
-                    "email": {
-                        "type": "string"
-                    },
-                    "birthDate": {
-                        "type": "string",
-                        "pattern": "/([0-9]{4})-(?:[0-9]{2})-([0-9]{2})/"
-                    },
-                    "userName": {
-                        "type": "string"
-                    }
-                }
-            }
-        }
+    "version": "1.0.0"
+  },
+  "serves": [
+    {
+      "url": "http://localhost:2016",
+      "description": "test API"
     }
+  ],
+  "paths": {
+    "/user": {
+      "get": {
+        "summary": "Get All users",
+        "description": "This route is reponsible for get all users in the database",
+        "tags": ["User"],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "$ref": "#/components/schemas/User"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
+    "/users": {
+      "post": {
+        "summary": "Create User",
+        "description": "This route is reponsible for create a new user.",
+        "tags": ["Users"],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/User"
+              },
+              "examples": {
+                "user": {
+                  "value": {
+                    "name": "Bob Ross",
+                    "email": "bobross@hotmail.com",
+                    "birthDate": "2000-06-08",
+                    "userName": "bobrosspainter"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "user created",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/User"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "It was not possible to create the user"
+          }
+        }
+      },
+      "get": {
+        "summary": "Find users by name or email",
+        "description": "This route is reponsible for search users by name and email using query params",
+        "tags": ["Users"],
+        "parameters": [
+          {
+            "name": "name",
+            "in": "query",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "ok",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/User"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
+    "/users/update/{id}": {
+      "put": {
+        "summary": "Update user by id",
+        "description": "This route is reponsible for update a user by id using path params",
+        "tags": ["Users"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/User"
+              },
+              "examples": {
+                "user": {
+                  "value": {
+                    "name": "Thaís Barbosa",
+                    "email": "thaisbarbosa@hotmail.com",
+                    "birthDate": "2000-06-08",
+                    "userName": "thaisbarbosa"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "$ref": "#/components/schemas/User"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
+    "/users/delete/{id}": {
+      "delete": {
+        "summary": "Delete user by id",
+        "description": "This route is reponsible for delete a user by id using path params",
+        "tags": ["Users"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "User deleted"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
+    "/users/{id}": {
+      "get": {
+        "summary": "Find user by id",
+        "description": "This route is reponsible for find a user by id using path params",
+        "tags": ["Users"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/User"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    }
+  },
+  "components": {
+    "schemas": {
+      "User": {
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          },
+          "birthDate": {
+            "type": "string",
+            "pattern": "/([0-9]{4})-(?:[0-9]{2})-([0-9]{2})/"
+          },
+          "userName": {
+            "type": "string"
+          }
+        }
+      }
+    }
+  }
 }
